# redsun-mimir

./: .copier-answers.yml  CHANGELOG.md  LICENSE  README.md  STORAGE_DESIGN.md  pyproject.toml  redsun.yaml  test_script.py
.github/workflows/: ci.yaml  run-code-analysis.yaml  run-tests.yaml
docs/: conf.py  flying.md  index.md
src/redsun_mimir/: __init__.py  __main__.py  _protocols.py  actions.py  commands.py  config.py  controller.py  model.py  plan_stubs.py  protocols.py  redsun.yaml  storage.py  widget.py
src/redsun_mimir/_static/: style.qss
src/redsun_mimir/common/: __init__.py  _aioevents.py  _commands.py  _manifest.py  _plan_spec.py  _types.py  actions.py  interrupts.py  plan_stubs.py
src/redsun_mimir/configurations/: __init__.py  _acquisition.py  _acquisition_detector.py  _acquisition_detector_uc2.py  _acquisition_only.py  _acquisition_uc2.py  _detector.py  _detector_only.py  _detector_only_uc2.py  _detector_uc2.py  _full_simulation.py  _full_uc2.py  _image_only.py  _image_only_uc2.py  _light.py  _light_only.py  _light_only_uc2.py  _light_uc2.py  _microscope_acquisition.py  _microscope_light.py  _microscope_motor.py  _motor.py  _motor_only.py  _motor_only_uc2.py  _motor_uc2.py  _stage_only.py  _stage_only_uc2.py  acquisition_configuration.yaml  acquisition_detector_config.yaml  acquisition_detector_configuration.yaml  full_configuration.yaml  light_configuration.yaml  microscope_acquisition_configuration.yaml  microscope_light_configuration.yaml  microscope_motor_configuration.yaml  mock_acquisition_configuration.yaml  mock_detector_configuration.yaml  mock_image_configuration.yaml  mock_light_configuration.yaml  mock_motor_configuration.yaml  (+8 more)
src/redsun_mimir/controller/: __init__.py  _acquisition.py  _config.py  _detector.py  _image.py  _light.py  _motor.py  _stage.py
src/redsun_mimir/device/: __init__.py  _common.py  _logics.py  _mocks.py  axis.py  buffer.py  median.py  signals.py  utils.py
src/redsun_mimir/device/microscope/: __init__.py  _devices.py
src/redsun_mimir/device/mmcore/: __init__.py  _backend.py  _camera.py  _common.py  _config.py  _devices.py  _logics.py  _new_camera.py  _serial.py  _stage.py
src/redsun_mimir/device/mmcore/configs/: __init__.py  _camera.py  _serial.py  _stage.py
src/redsun_mimir/device/pseudo/: __init__.py  _devices.py
src/redsun_mimir/device/youseetoo/: __init__.py  _actions.py  _backend.py  _devices.py  utils.py
src/redsun_mimir/model/: __init__.py  _config.py  _mock_light.py  _mock_stage.py  _mocks.py  utils.py
src/redsun_mimir/model/microscope/: __init__.py  _models.py
src/redsun_mimir/model/mmcore/: __init__.py  _camera.py  _config.py  _models.py
src/redsun_mimir/model/openwfs/: __init__.py  _core.py  _models.py
src/redsun_mimir/model/pseudo/: __init__.py  _median.py
src/redsun_mimir/model/storage/: __init__.py  _zarr.py
src/redsun_mimir/model/youseetoo/: __init__.py  _actions.py  _config.py  _models.py
src/redsun_mimir/presenter/: __init__.py  _acquisition.py  _config.py  _detector.py  _light.py  _median.py  _motor.py  acquisition.py  detector.py  light.py  median.py  motor.py  storage.py
src/redsun_mimir/storage/: __init__.py  _zarr.py  base.py
src/redsun_mimir/tests/: conftest.py  test_config.py  test_model.py
src/redsun_mimir/tests/data/: test_motor_config.yaml
src/redsun_mimir/utils/: __init__.py  _decorators.py  _treeview.py  descriptors.py  qt.py
src/redsun_mimir/utils/napari/: __init__.py  _callbacks.py  _common.py  _controls.py  _layer.py  _model.py  _overlay.py
src/redsun_mimir/utils/qt/: __init__.py  _magicgui_help.py  _plan_widget.py  _treeview.py  _widget_factory.py
src/redsun_mimir/view/: __init__.py  _acquisition.py  _config.py  _detector.py  _image.py  _light.py  _motor.py  acquisition.py  detector.py  image.py  light.py  motor.py  storage.py
src/redsun_mimir/widget/: __init__.py  _acquisition.py  _config.py  _detector.py  _image.py  _light.py  _motor.py  _stage.py  _stage_widget.py
tests/: conftest.py  test_camera.py  test_config.py  test_controller.py  test_devices.py  test_microscope_devices.py  test_model.py  test_openwfs_model.py  test_plan_spec.py  test_plan_widget.py  test_presenters.py  test_stack.py  test_storage.py  test_views.py  test_widget.py
tests/data/: mock_configuration.yaml  test_detector_config.yaml  test_incorrect_light_config.yaml  test_light_config.yaml  test_motor_config.yaml  test_openwfs_light.yaml  test_openwfs_motor.yaml
