[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "redsun-mimir"
dynamic = ["version"]
description = "Plugin bundle for the OpenUC2 'Mimir' microscope"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
  { name = "Jacopo Abramo", email = "jacopo.abramo@gmail.com" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    "sunflare[pyqt]>=0.4.2",
    "superqt",
]

[project.optional-dependencies]
docs = [
    "sphinx",
    "pydata-sphinx-theme",
    "sphinx-design",
    "myst-parser"
]
dev = [
    "ruff",
    "mypy",
    "pytest",  # https://docs.pytest.org/en/latest/contents.html
    "pytest-cov",  # https://pytest-cov.readthedocs.io/en/latest/
    "pytest-qt",
    "pre-commit",
]

[project.urls]
"Bug Tracker" = "https://github.com/redsun-acquisition/redsun-mimir/issues"
"Documentation" = "https://github.com/redsun-acquisition/redsun-mimir#README.md"
"Source Code" = "https://github.com/redsun-acquisition/redsun-mimir"
"User Support" = "https://github.com/redsun-acquisition/redsun-mimir/issues"

[project.scripts]
mimir = "redsun_mimir.__main__:main"

[project.entry-points]

[project.entry-points."redsun.plugins.controllers.config"]
stagecontroller_config = "redsun_mimir:StageControllerInfo"
[project.entry-points."redsun.plugins.widgets.config"]
stagewidget_config = "redsun_mimir:StageWidgetInfo"

[project.entry-points."redsun.plugins.controllers"]
stagecontroller = "redsun_mimir:StageController"

[project.entry-points."redsun.plugins.widgets"]
stagewidget = "redsun_mimir:StageWidget"

[tool.coverage.run]
source = ["redsun_mimir"]
omit = [
    "src/redsun_mimir/tests/conftest.py"
]

[tool.coverage.report]
exclude_lines = [
    "@abstractmethod",
    "if TYPE_CHECKING:",
    "@overload",
    "class .*Protocol",
    "pragma: no cover",
    "except ImportError",
    "except PackageNotFoundError",
    "raise NotImplementedError()",
]
omit = [
    "src/redsun_mimir/__main__.py",
    "src/redsun_mimir/configurations/**",
]

[tool.mypy]
files = "src/**/*.py"
disable_error_code = ["import-untyped"]
pretty = true

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests"
]

[tool.ruff]
target-version = "py39"
extend-exclude = ["docs"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
extend-select = [
    "D",
    "I",
    "TC",
    "FA102"
]
ignore = [
    "D100", # https://docs.astral.sh/ruff/rules/undocumented-public-module/
    "D104", # https://docs.astral.sh/ruff/rules/undocumented-public-package/
    "D103", # https://docs.astral.sh/ruff/rules/undocumented-public-function/
    "D107", # https://docs.astral.sh/ruff/rules/undocumented-public-init/
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.sdist]
include = ["src", "tests"]

[tool.hatch.build.targets.wheel]
only-include = ["src/redsun_mimir"]
sources = ["src"]
